Infra/k8s/chatbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: ishanjoshi25/chatbotflask
          # resourses:
            # limits:
              # nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-srv
spec:
  selector:
    app: chatbot
  ports:
    - name: chatbot
      protocol: TCP
      port: 3000
      targetPort: 3000
