Infra/k8s/report.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
    spec:
      containers:
        - name: report
          image: ishanjoshi25/report
---
apiVersion: v1
kind: Service
metadata:
  name: report-srv
spec:
  selector:
    app: report
  ports:
    - name: report
      protocol: TCP
      port: 3000
      targetPort: 3000
